add previousSolution feature