@@ -49,17 +49,19 @@ public class SchedulingService {
 
     @Scheduled(fixedDelay = 1, timeUnit = TimeUnit.SECONDS)
     private void runTasks() {
-        if (tasks.size() == 0) {
+        if (tasks.isEmpty()) {
             return;
         }
 
-        ScheduledTask taskToRun = tasks.get(0);
-        tasks.remove(0);
+        ScheduledTask taskToRun = tasks.removeFirst();
         FleetInstructionsRequest request = taskToRun.getRequest();
         logger.info("Starting job with uuid: {}", taskToRun.getId());
-        VehicleRoutingProblemSolution solution = VRPService.calculateBestSolution(request.getVehicles(), request.getJobs(), Arrays.toString(request.getVehicles()) + " " + Arrays.toString(request.getJobs()));
-        System.out.println(solution);
+        VehicleRoutingProblemSolution solution = runRequest(request, taskToRun.getId());
         results.put(taskToRun.getId(), solution);
         logger.info("Finished job with uuid: {}", taskToRun.getId());
+    }
+
+    private VehicleRoutingProblemSolution runRequest(FleetInstructionsRequest request, String uuid) {
+        return VRPService.calculateBestSolution(request.getVehicles(), request.getJobs(), uuid, results.getOrDefault(request.getPreviousSolutionId(), null), request.getPreviousSolutionId());
     }
 }
